fixed bugs on bio to ensure alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,13 +116,19 @@ animation-fill-mode: forwards;
 #left-about {
     padding-top: 30px;
     width: 33%;
-    margin-left: 25px;
+    margin-top: 150px;
+    margin-left: 50px;
+    float: left;
+    text-align: center;
 }
 
 #right-about {
     padding-top: 30px;
     width: 33%;
-    margin-left: 25px;
+    margin-top: 150px;
+    margin-right: 50px;
+    float: right;
+    text-align: center;
 }
 
 #center-about {
@@ -131,32 +137,16 @@ animation-fill-mode: forwards;
 
 }
 
-}
 
-.left-about-paragraph {
-    width: 60%;
-    float: left;
-    line-height: 20px;
-    clear: both;
-}
-
-.right-about-paragraph {
-    width: 60%;
-    float: right;
-    line-height: 20px;
-    clear: both;
-}
-
-.welcome {
+#welcome {
     text-align: center;
-    margin-top: 25px;
+    margin-top: 50px;
 }
 
 #circle-container {
     width: 450px;
     height: 450px;
     padding: 30px;
-    border: solid 1px #000000;
     border-radius: 50%;
     margin: 0 auto;
 }
@@ -171,7 +161,7 @@ animation-fill-mode: forwards;
 /* Footer */
 
 footer {
-    height: 150px;
+    height: 75px;
 }
 
 .social-networks {
